dist_man1_MANS=

if BUILD_SUPERMAND
  dist_man1_MANS+=supermand.1
endif

if ENABLE_QT
  dist_man1_MANS+=superman-qt.1
endif

if BUILD_SUPERMAN_CLI
  dist_man1_MANS+=superman-cli.1
endif

if BUILD_SUPERMAN_TX
  dist_man1_MANS+=superman-tx.1
endif

if ENABLE_WALLET
if BUILD_SUPERMAN_WALLET
  dist_man1_MANS+=superman-wallet.1
endif
endif
